k8s-manifests/containerd-config-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: containerd-config
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: containerd-config
  template:
    metadata:
      labels:
        name: containerd-config
    spec:
      hostPID: true
      hostNetwork: true
      containers:
      - name: pause
        image: gcr.io/google_containers/pause:3.2
      volumes:
      - name: etc-containerd
        hostPath:
          path: /etc/containerd
          type: Directory
